[gd_scene load_steps=13 format=3 uid="uid://dbwcc8pn213fv"]

[ext_resource type="Theme" uid="uid://dynyhmx2ajvt6" path="res://resources/main_theme.tres" id="1_kp6yo"]
[ext_resource type="Script" path="res://scenes/MainMenu/main_menu.gd" id="2_7kvj5"]
[ext_resource type="Shader" path="res://resources/materials/materialize.gdshader" id="3_pup3w"]
[ext_resource type="Texture2D" uid="uid://o617e6js0p8e" path="res://assets/BackgroundImage.jpg" id="3_qig5t"]
[ext_resource type="Script" path="res://scenes/MainMenu/MasterSlider.gd" id="4_x407j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fuic7"]
shader = ExtResource("3_pup3w")
shader_parameter/fragment_number = Vector2(12, 12)
shader_parameter/dissolve_state = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_rssmo"]
font_size = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8yvsp"]
bg_color = Color(0.988235, 0.556863, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3pev6"]
bg_color = Color(0.988235, 0.556863, 0, 0.94902)

[sub_resource type="Animation" id="Animation_6i8y0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu:material:shader_parameter/dissolve_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_v2lsb"]
resource_name = "fadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Menu/VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.3, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.0117647), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Menu:material:shader_parameter/dissolve_state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_18tme"]
_data = {
"RESET": SubResource("Animation_6i8y0"),
"fadeIn": SubResource("Animation_v2lsb")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kp6yo")
script = ExtResource("2_7kvj5")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_qig5t")
expand_mode = 1

[node name="Menu" type="Control" parent="."]
material = SubResource("ShaderMaterial_fuic7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
modulate = Color(1, 1, 1, 0)
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
use_parent_material = true
layout_mode = 2
text = "Ducking"
label_settings = SubResource("LabelSettings_rssmo")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Play" type="Button" parent="Menu/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_8yvsp")
theme_override_styles/hover = SubResource("StyleBoxFlat_3pev6")
text = "Play"
language = "en"

[node name="Options" type="Button" parent="Menu/VBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Options"
language = "en"

[node name="Credits" type="Button" parent="Menu/VBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Credits"
language = "en"

[node name="Options" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 125
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 125

[node name="TabContainer" type="TabContainer" parent="Options"]
layout_mode = 2
tab_alignment = 1

[node name="Aduio" type="MarginContainer" parent="Options/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="GridContainer" type="GridContainer" parent="Options/TabContainer/Aduio"]
layout_mode = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="MasterVolume" type="Label" parent="Options/TabContainer/Aduio/GridContainer"]
layout_mode = 2
text = "Master Volume
"

[node name="MasterSlider" type="HBoxContainer" parent="Options/TabContainer/Aduio/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("4_x407j")

[node name="MasterVolumeLabel" type="Label" parent="Options/TabContainer/Aduio/GridContainer/MasterSlider"]
layout_mode = 2
text = "100"

[node name="MasterVolumeSlider" type="HSlider" parent="Options/TabContainer/Aduio/GridContainer/MasterSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MusicVolume" type="Label" parent="Options/TabContainer/Aduio/GridContainer"]
visible = false
layout_mode = 2
text = "Music Volume
"

[node name="MusicSlider" type="HBoxContainer" parent="Options/TabContainer/Aduio/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicVolumeLabel" type="Label" parent="Options/TabContainer/Aduio/GridContainer/MusicSlider"]
layout_mode = 2
text = "100"

[node name="MusicVolumeSlider" type="HSlider" parent="Options/TabContainer/Aduio/GridContainer/MusicSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SfxVolume" type="Label" parent="Options/TabContainer/Aduio/GridContainer"]
visible = false
layout_mode = 2
text = "Effects Volume
"

[node name="SfxSlider" type="HBoxContainer" parent="Options/TabContainer/Aduio/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="SfxVolumeLabel" type="Label" parent="Options/TabContainer/Aduio/GridContainer/SfxSlider"]
layout_mode = 2
text = "100"

[node name="SfxVolumeSlider" type="HSlider" parent="Options/TabContainer/Aduio/GridContainer/SfxSlider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Video" type="MarginContainer" parent="Options/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="GridContainer" type="GridContainer" parent="Options/TabContainer/Video"]
layout_mode = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="FpsLabel" type="Label" parent="Options/TabContainer/Video/GridContainer"]
layout_mode = 2
text = "Display FPS"

[node name="FpsCheckButton" type="CheckButton" parent="Options/TabContainer/Video/GridContainer"]
layout_mode = 2

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_18tme")
}

[connection signal="pressed" from="Menu/VBoxContainer/VBoxContainer/Play" to="." method="play"]
[connection signal="pressed" from="Menu/VBoxContainer/VBoxContainer/Options" to="." method="show_options"]
[connection signal="pressed" from="Menu/VBoxContainer/VBoxContainer/Credits" to="." method="show_credits"]
[connection signal="drag_ended" from="Options/TabContainer/Aduio/GridContainer/MasterSlider/MasterVolumeSlider" to="Options/TabContainer/Aduio/GridContainer/MasterSlider" method="_on_master_volume_slider_drag_ended"]
[connection signal="value_changed" from="Options/TabContainer/Aduio/GridContainer/MasterSlider/MasterVolumeSlider" to="Options/TabContainer/Aduio/GridContainer/MasterSlider" method="_on_master_volume_slider_value_changed"]
